<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/colorId"
        android:icon="@drawable/baseline_color_lens_white_18dp"
        android:title="@string/Color"
        app:showAsAction="always" />
    <item
        android:id="@+id/clearId"
        android:title="@string/clear" />
    <item
        android:id="@+id/openId"
        android:icon="@drawable/baseline_folder_open_white_18dp"
        android:title="@string/Item"
        app:showAsAction="always" />
    <item
        android:id="@+id/saveId"
        android:icon="@drawable/save"
        android:title="@string/Save" />
    <item
        android:id="@+id/lineWidth"
        android:icon="@drawable/baseline_create_white_18dp"
        android:title="@string/LineWidth"
        app:showAsAction="always" />
    <item
        android:id="@+id/eraseId"
        android:icon="@drawable/eraser"
        android:title="@string/erase"
        app:showAsAction="always" />
</menu>